--- a/css/styles.css
+++ b/css/styles.css
@@ -11314,3 +11314,9 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+
+body { font-family: Arial, sans-serif; text-align: center; }
+svg { width: 100%; height: auto; }
+.highlighted { fill: #ff5733 !important; stroke: #000; stroke-width: 1px; }
+  
