--- a/css/styles.css
+++ b/css/styles.css
@@ -11318,5 +11318,17 @@ section#contact form#contactForm :-ms-input-placeholder {
 
 body { font-family: Arial, sans-serif; text-align: center; }
 svg { width: 100%; height: auto; }
+.pais { fill: #ccc; stroke: #000; stroke-width: 0.5px; }
 .highlighted { fill: #ff5733 !important; stroke: #000; stroke-width: 1px; }
+
+#svg-map path { fill:#0094d9 }
+#svg-map #activeState { fill:#6a1a21 }
+/* #.highlighted { fill:#6a1a21 } */
+/* #bahia { fill:#6a1a21 } */
+#svg-map text { fill:#fff; font:12px Arial-BoldMT, sans-serif; cursor:pointer }
+#svg-map a{ text-decoration:none }
+#svg-map a:hover { cursor:pointer; text-decoration:none }
+#svg-map a:hover path{ fill:#003399 !important }
+#svg-map .circle { fill:#66ccff }
+#svg-map a:hover .circle { fill:#003399 !important; cursor:pointer }
   
